<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--application name-->
    <string name="app_name">Пътни Знаци</string>

    <!--Drawer List Name-->
    <string name="drawer_books_list">Категории</string>
    <string name="drawer_pdf">Pdf</string>
    <string name="drawer_bookmark">Запазени</string>
    <string name="drawer_rate">Оцени</string>
    <string name="drawer_more">Още от студио Зебра</string>
    <string name="drawer_other">Информация</string>

    <!-- Change AdMob Banner and Interstitial Id -->
    <string name="admob_publisher_id">pub-3940256099942544</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_banner_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_interstitial_id">ca-app-pub-3940256099942544/1033173712</string>

    <!-- play store application link more apps -->
    <string name="more_apps">https://studiozebra.tech</string>
    <string name="privacy_policy_url">https://studiozebra.tech</string>

    <!--app about information-->
    <string name="app_version">Версия 1.0.1</string>
    <string name="app_copyright">Авторски права &#169; 2018 Студио Зебра \n\nВсички илюстрации и графики в приложението са авторски и правата за тях принадлежат на Студио Зебра. \n\nИзточниците за всички текстове са посочени непосредствено до тях.\n\nВ случай, че източник липсва следва да се счете, че текстът е авторски. \n\nАвторски права за шаблона: \n&#169; 2017 Soloroid </string>
    <string name="app_email">contact@studiozebra.tech</string>
    <string name="rate_summary">Оцени, коментирай или остави предложения за апликацията</string>
    <string name="more_summary">Виж всички апликации от Студио Зебра</string>
    <string name="title_app_name">Име</string>
    <string name="title_app_version">Версия</string>
    <string name="title_app_email">Имейл за връзка</string>
    <string name="title_app_copyright">Авторски права</string>
    <string name="title_app_rate">Rate</string>
    <string name="title_app_more">More</string>

    <!--network-->
    <string name="failed_connect_network">Няма връзка с интернет</string>
    <string name="loading">Зареждане&#8230;</string>

    <!--firebase analytics-->
    <string name="analytics_item_id_1">main_menu</string>
    <string name="analytics_item_id_2">story_list</string>
    <string name="analytics_item_id_3">story_detail</string>
    <string name="analytics_item_name_1">Main Menu</string>
    <string name="analytics_item_name_2">Story List</string>
    <string name="analytics_item_name_3">Story Detail</string>

    <!--others-->
    <string name="img_no">Няма запазени знаци</string>
    <string name="menu_share">Сподели</string>
    <string name="menu_next">Следващ знак</string>
    <string name="menu_fav">Запази</string>
    <string name="menu_back">Предишен знак</string>
    <string name="menu_favorite">Списък за бърз достъп</string>
    <string name="search_hint">Hint</string>
    <string name="menu_search">Търси</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="press_again_to_exit">Натисни отново за да излезеш</string>

    <string name="bookmark_added">Знакът е запазен в списъка</string>
    <string name="bookmark_removed">Знакът е премахнат от списъка</string>

    <!-- Welcome Screen -->

    <string name="next">Напред</string>
    <string name="skip">Назад</string>
    <string name="start">Начало</string>

    <string name="slide_1_title">ВИНАГИ С ТЕБ</string>
    <string name="slide_1_desc">Пълен каталог с пътните знаци в България за лесна самоподготовка директно в телефона ти!</string>

    <string name="slide_2_title">ЛЕСНА НАВИГАЦИЯ</string>
    <string name="slide_2_desc">Удобна търсачка, с която да откриеш конкретен знак веднага.</string>

    <string name="slide_3_title">СПИСЪК ЗА БЪРЗ ДОСТЪП</string>
    <string name="slide_3_desc">Запази знаци от всички категории за лесен достъп при преговор.</string>
    <string name="placeholder">Placeholder</string>

</resources>